--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="inner-page.html" class="get-started-btn scrollto">Refrences</a>
+      <a href="inner-page.html" class="get-started-btn scrollto">References</a>
 
     </div>
   </header><!-- End Header -->
