--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Refrences</title>
+  <title>References</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Refrences</h2>
+          <h2>References</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Refrences</li>
+            <li>References</li>
           </ol>
         </div>
 
@@ -94,8 +94,8 @@
       <div class="container">
 	  
 		<div class = "title" data-aos="fade-up">
-			<h3>Refrences</h3>
-			<p>All links are clickable, scroll down for more refrences</p>
+			<h3>References</h3>
+			<p>All links are clickable, scroll down for more references</p>
 		</div>
 		
 		<div class = "subtitle" data-aos="fade-right">
