--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</div>
 					
 					<div class = "atitle" data-aos="fade-up">
-						<h3>How did the cube stand on it's conrner?</h3>
+						<h3>How did the cube stand on it's corner?</h3>
 					</div>
 					
 					<p data-aos="fade-up">The above GIF shows a cube that is balancing on it's conners. Notice the spinning components in the cube? those are multiple gyroscopes working together to make the cube stand up on positions where it is impossible to do so without the help of gyroscopes. But what exactly are gyroscopes and how do they work? How does a gyroscope help in flying planes?</p>
@@ -234,7 +234,7 @@
 			  <div class="col-xl-7 pl-0 pl-lg-6 pr-lg-2 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
 				<div class="content d-flex flex-column justify-content-center">
 				  <h3>Gyroscopes helps with awareness</h3>
-				  <p>As part of the avionics instruments. The gyroscope is very important instrument which provides the attitude, compass, vertical speed indicator and the turn coordinates. It also allows precise and safe trespass through the clouds. Normally for pilots that flies under VMC(Visual Meteorological Conditions) normally relies on the gyroscope to get get out of IMC(Instrument meteorological conditions) situations. </p>
+				  <p>As part of the avionics instruments. The gyroscope is an important instrument which provides the attitude, compass, vertical speed indicator and the turn coordinates. It also allows precise and safe trespass through the clouds. Normally for pilots that flies under VMC(Visual Meteorological Conditions) normally relies on the gyroscope to get get out of IMC(Instrument meteorological conditions) situations. </p>
 				  <br/>
 				  <p>General aviation has long enough been using gyro devices to get the bugs figured out pretty well. See on the ground how the instruments respond. Those showing motion on the yaw axis should shift freely during the taxi, and any changes in pitch should be seen by the AI, such as crossing the potholes in front of the Fixes Based Operator(FBO). If you hear one of the gyros moaning over the engine's roar, it's a good bet that this planet won't be long for the instrument. For the pneumatic instruments, also be alert for proper suction indications; the gauge should be not well above idle velocity in the green arc and most certainly by the run-up rpm. As well as one below the green arc, watch for too high an indication; too much suction will spin the gyros past their design limits.</p>
 				</div><!-- End .content-->
