--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<h3>How did the cube stand on it's corner?</h3>
 					</div>
 					
-					<p data-aos="fade-up">The above GIF shows a cube that is balancing on it's conners. Notice the spinning components in the cube? those are multiple gyroscopes working together to make the cube stand up on positions where it is impossible to do so without the help of gyroscopes. But what exactly are gyroscopes and how do they work? How does a gyroscope help in flying planes?</p>
+					<p data-aos="fade-up">The above GIF shows a cube that is balancing on it's corners. Notice the spinning components in the cube? those are multiple gyroscopes working together to make the cube stand up on positions where it is impossible to do so without the help of gyroscopes. But what exactly are gyroscopes and how do they work? How does a gyroscope help in flying planes?</p>
 				  </div>
 				</div>
 				
