--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 				  <h3>Gyroscopes helps with awareness</h3>
 				  <p>As part of the avionics instruments. The gyroscope is an important instrument which provides the attitude, compass, vertical speed indicator and the turn coordinates. It also allows precise and safe trespass through the clouds. Normally for pilots that flies under VMC(Visual Meteorological Conditions) normally relies on the gyroscope to get get out of IMC(Instrument meteorological conditions) situations. </p>
 				  <br/>
-				  <p>General aviation has long enough been using gyro devices to get the bugs figured out pretty well. See on the ground how the instruments respond. Those showing motion on the yaw axis should shift freely during the taxi, and any changes in pitch should be seen by the AI, such as crossing the potholes in front of the Fixes Based Operator(FBO). If you hear one of the gyros moaning over the engine's roar, it's a good bet that this planet won't be long for the instrument. For the pneumatic instruments, also be alert for proper suction indications; the gauge should be not well above idle velocity in the green arc and most certainly by the run-up rpm. As well as one below the green arc, watch for too high an indication; too much suction will spin the gyros past their design limits.</p>
+				  <p>These instrument showing motion on the yaw axis should shift freely during the taxi, and any changes in pitch should be seen through the AI. If you hear one of the gyros moaning over the engine's roar, it's a good sign that the instrument won’t last any longer. As well as one below the green arc, watch for too high an indication; too much suction will spin the gyros past their design limits.</p>
 				</div><!-- End .content-->
 			  </div>
 			</div>
